# WeChat_Agent

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.zh-CN.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  agent.py  build_rag_index.bat  build_rag_index.py  check_env.bat  check_env.py  install_deps.bat  mcp_server.py  pyproject.toml  requirements.txt  run_streamlit.bat  run_wecom.bat  streamlit_app.py  wechat_robot_server.py  wecom_ws_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.streamlit/: config.toml
app/: __init__.py
app/agent/: __init__.py  action_parser.py  console_stream.py  context_selector.py  kb_body_images.py  llm_key_pool.py  memory_manager.py  model_client.py  prompt_service.py  react_events.py  runtime.py  stream_context.py  tool_call_protocol.py  tool_metadata.py  tool_registry.py
app/application/: __init__.py
app/application/conversation/: __init__.py  services.py
app/channel/: __init__.py
app/channel/wecom/: __init__.py  adapter.py  crypto_service.py  router.py
app/contracts/: __init__.py  protocols.py
app/infrastructure/: __init__.py  cache.py  client_ip.py  logging_setup.py  observability.py  tool_call_recorder.py
app/mcp/: __init__.py  client.py  registry.py
app/skills/: __init__.py  executor.py  injector.py  lifecycle.py  models.py  parser.py  registry.py  retrieval.py  router.py  system.py
config/: mcp_servers.json  mcp_servers.json.example
db/: __init__.py  client.py  tool_call_stats.py
knowledge/: 测试50问.txt
rag/: __init__.py  block_store.py  chroma_telemetry.py  doc_assets.py  env_config.py  http_key_pool.py  keyword_retrieval.py  logging_utils.py  prompt_loader.py  rag_images.py  rag_service.py  rerank.py  sqlite_chroma_compat.py  vector_store.py
rag/ingestion/: __init__.py  asset_store.py  caption_service.py  chunk_builder.py  models.py  pipeline.py
rag/ingestion/parsers/: __init__.py  docx_parser.py  image_parser.py  pdf_parser.py  (+2 more)
skills/knowledge-rag-answer/: SKILL.md
skills/testcase-generator/: SKILL.md
tools/: __init__.py  base_tools.py  bing_cn_tools.py  mcp_tools.py  rag_tools.py
wecom/: __init__.py  aibot_logging.py  image_delivery.py  media_uploader.py  message_parsers.py  reply_builders.py
wxwork/: __init__.py  crypto.py  ierror.py
(+2 files in other folders)
